# epiLoRA

./: .gitignore  CLAUDE.md  LICENSE  README.md  data.py  ensemble_eval.py  ensemble_io.py  features.py  model.py  prepare.py  probe_activations.py  program.md  pyproject.toml  requirements.txt  run_bepipred.py  run_bepipred_baseline.py  run_bepipred_discotope.py  run_bepipred_discotope_combo.py  run_bepipred_dropout.py  run_bepipred_esmc.py  run_bepipred_features.py  run_bepipred_hiddenkey.py  run_bepipred_hkx.py  run_bepipred_hky_pscan.py  run_bepipred_lora_all_active.py  run_bepipred_lora_scale.py  run_bepipred_lora_select.py  run_bepipred_pretrain.py  run_bepipred_probe_ldrop.py  run_bepipred_rsa.py  run_bepipred_ultra.py  run_ensemble.py  run_ensemble_esm2.py  run_ensemble_esm3.py  run_ensemble_esmif1.py  run_if1_5fold.py  run_if1_lora_5fold.py  run_if1_xgb_5fold.py  train.py  train_esm2.py  (+2 more)
data/: README.md  data_prep.smk  filter_sabdab_30pct.py  filter_sabdab_novel.py  make_holdouts.py  make_sabdab_fasta.py  pdb_download.sh  process_pdb_contacts.py
data/scripts/: cluster_fasta.py  combine_epitopes.py  filter_clusters_against_eval.py  filter_tsv.py  generate_fasta.py  get_epitopes.py  get_eval_set.py  structures.py
data/train_test_eval/: all_epitopes.fasta  (+7 more)
epilora/: data.py  predict.py  train.py
findings/: backbone_ensemble.md  discotope_combo.md  discotope_esm3.md  esmc_lora.md  hiddenkey_lora_dropout.md
scripts/: tally_hiddenkey.py
tests/: conftest.py  test_prepare.py  test_train.py  test_train_struct.py
weights/: README.md
(+34 files in other folders)
